# otel-log-exporter

./: README.md  docker-compose.yml  docker-up.sh  list-s3.sh  my-log  output.txt  pyproject.toml  requirements.txt
alloy/: config.alloy
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/dashboards/json/: cmcd-dashboard.json
grafana/provisioning/datasources/: datasources.yaml
src/: __init__.py  cdn_log_parser.py  cmcd_parser.py  collector.py  otel_exporter.py  s3_source.py
ts/: README.md  package-lock.json  package.json
ts/src/: cdn-log-parser.ts  cmcd-parser.ts  collector.ts  otel-exporter.ts  s3-source.ts
